# summer

./: .clang-format  .gitignore  AUTHORS  LICENSE  README.md  makefile  meson.build
include/: args.h  threads.h
source/: args.c  main.c  meson.build  threads.c
subprojects/: testing.wrap  types.wrap
tests/: meson.build
